// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/app/translate/extract.source 01 1`] = `Array []`;

exports[`lib/riw/app/translate/extract.source 02 1`] = `Array []`;

exports[`lib/riw/app/translate/extract.source 03 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "description": undefined,
    "file": "/fixtures/03/a.js",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "b.1!",
    "description": undefined,
    "file": "/fixtures/03/b.js",
    "id": "b.1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/03/b.js",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "b.3!",
    "description": Object {
      "abc": "def",
      "foo": "bar",
    },
    "file": "/fixtures/03/b.js",
    "id": "b.3",
  },
]
`;

exports[`lib/riw/app/translate/extract.source 04 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "description": undefined,
    "file": "/fixtures/04/a.js",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "a.1 again!",
    "description": undefined,
    "file": "/fixtures/04/aa.js",
    "id": "a.1",
  },
  Object {
    "defaultMessage": "b.1!",
    "description": undefined,
    "file": "/fixtures/04/b.js",
    "id": "b.1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/04/b.js",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "b.2 again!",
    "description": "b.2 again desc",
    "file": "/fixtures/04/bb.js",
    "id": "b.2",
  },
  Object {
    "defaultMessage": "c.1!",
    "description": undefined,
    "file": "/fixtures/04/c.js",
    "id": "c.1",
  },
]
`;

exports[`lib/riw/app/translate/extract.source 05 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "description": undefined,
    "file": "/fixtures/05/a.js",
    "id": "a1",
  },
  Object {
    "defaultMessage": "b.1!",
    "description": undefined,
    "file": "/fixtures/05/b.js",
    "id": "b1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/05/b.js",
    "id": "b2",
  },
]
`;

exports[`lib/riw/app/translate/extract.source 06 1`] = `
Array [
  Object {
    "defaultMessage": "a.1!",
    "description": undefined,
    "file": "/fixtures/06/a.js",
    "id": "a1",
  },
  Object {
    "defaultMessage": "a.1 again!",
    "description": undefined,
    "file": "/fixtures/06/aa.js",
    "id": "a1again",
  },
  Object {
    "defaultMessage": "b.1!",
    "description": undefined,
    "file": "/fixtures/06/b.js",
    "id": "b1",
  },
  Object {
    "defaultMessage": "b.2!",
    "description": "b.2 desc",
    "file": "/fixtures/06/b.js",
    "id": "b2",
  },
  Object {
    "defaultMessage": "b.2 again!",
    "description": "b.2 again desc",
    "file": "/fixtures/06/bb.js",
    "id": "b2again",
  },
  Object {
    "defaultMessage": "c.1!",
    "description": undefined,
    "file": "/fixtures/06/c.js",
    "id": "c1",
  },
]
`;
